# ropey

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LICENSE.md  README.md  build_metric_combos.sh  design.md  index.html  perf.data  perf.data.old  search-index.js  settings.html  source-files.js  test_all_features.sh  test_char.sh  test_integration_with_small_chunks.sh  test_line_cr_lf.sh  test_line_lf.sh  test_line_lf_cr.sh  test_line_unicode.sh  test_metric_combos.sh  test_miri.sh  test_utf16.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
benches/: create.rs  from_str.rs  hash.rs  insert.rs  iterators.rs  large.txt  lf.txt  queries.rs  remove.rs  small.txt  small_multibyte.txt  tiny.txt
design/: design.md
examples/: from_reader.rs  from_str.rs  front_page.rs  graphemes.rs  graphemes_iter.rs  graphemes_step.rs  inserts.rs  random_inserts.rs  random_removals.rs  read_latin_1.rs  search_and_replace.rs  simple_buffer.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: hash.rs  mutation.rs  mutation_small_chunks.rs  small.txt
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/iter/traits/collect/: trait.Extend.js  trait.FromIterator.js  trait.IntoIterator.js
implementors/core/iter/traits/double_ended/: trait.DoubleEndedIterator.js
implementors/core/iter/traits/exact_size/: trait.ExactSizeIterator.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
implementors/core/ops/drop/: trait.Drop.js
implementors/core/ops/index/: trait.Index.js  trait.IndexMut.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
ropey/: all.html  index.html  sidebar-items.js  struct.Rope.html  struct.RopeBuilder.html  struct.RopeSlice.html
ropey/iter/: index.html  sidebar-items.js  struct.Bytes.html  struct.Chars.html  struct.Chunks.html  struct.Lines.html
ropey/rope/: struct.Rope.html
ropey/rope_builder/: struct.RopeBuilder.html
ropey/slice/: struct.RopeSlice.html
ropey/str_utils/: fn.byte_to_char_idx.html  fn.byte_to_line_idx.html  fn.char_to_byte_idx.html  fn.char_to_line_idx.html  fn.line_to_byte_idx.html  fn.line_to_char_idx.html  index.html  sidebar-items.js
scripts/: gen_docs.sh  test_all_features.sh  test_char.sh  test_external_with_small_chunks.sh  test_line_lf.sh  test_miri.sh
smallvec/: enum.CollectionAllocErr.html  index.html  macro.smallvec.html  struct.Drain.html  struct.IntoIter.html  struct.SmallVec.html
src/: child_array.rs  chunk_cursor.rs  clippy.toml  crlf.rs  extra.rs  iter.rs  lib.rs  line_column.rs  main.rs  node.rs  rope.rs  rope_builder.rs  segmentation.rs  segmenter.rs  shared_impl.rs  slice.rs  small_string.rs  small_string_utils.rs  str_utils.rs  text_info.rs  two_way_peekable.rs
src/ropey/: crlf.rs.html  iter.rs.html  lib.rs.html  rope.rs.html  rope_builder.rs.html  slice.rs.html  str_utils.rs.html
src/ropey/tree/: mod.rs.html  node.rs.html  node_children.rs.html  node_text.rs.html  text_info.rs.html
src/smallvec/: lib.rs.html
src/tree/: children.rs  internal.rs  leaf.rs  mod.rs  node.rs  node_children.rs  node_text.rs  text.rs  text_info.rs
tests/: clone_rope.rs  clone_rope_to_thread.rs  crlf.rs  fix_tree.rs  from_reader.rs  from_str.rs  hash.rs  lifetimes.rs  medium.txt  non_ascii.txt  non_ascii_comparison.rs  proptest_tests.proptest-regressions  proptest_tests.rs  quickcheck_tests.proptest-regressions  quickcheck_tests.rs  shrink_to_fit.rs  small.txt  small_random_inserts.rs  test_text.txt
